Created meta tag boilerplate. Added meta boiler to index.html which will act as the home page

--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
 
-    <title>Rubber Duck</title>
+<html>
+
+  <head>
+
+    	<meta charset="utf-8">
+
+    	<title>RBR Duck</title>
+
+    	<meta name="image_src" content= "">>Duck IMG Placeholder.<<"" />
+
+      <meta name="title" content="RBR Duck" />
+
+      <meta name="description" content="RBR Duck is your go to duck for all of your troubleshooting needs. Over 12 Software Engineering categories to get find help and a online community of programmers to help. Quack!" />
+
+      <meta property="og:image:type" content="image/png" />
+
+      <meta property="og:image:width" content="1200" />
+
+      <meta property="og:image:height" content="627" />
+
+      <meta property="og:image:url" content=">>/img/Duckio_Home.png<<" />
+
+      <meta property="og:image" content=">>/img/Duckio_Home.png<<" />
+
+    	<meta property="og:image:secure_url" content=">>/img/Duckio_Home.png<<" />
+
+    	<meta property="og:site_name" content="RBR Duck" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles/style.css">
