Finalized meta tags, adding required tags into head

--- a/views/index.html
+++ b/views/index.html
@@ -2,42 +2,54 @@
 
 <html>
 
-  <head>
+<head>
 
-    	<meta charset="utf-8">
+    <meta charset="utf-8">
 
-    	<title>RBR Duck</title>
+    <meta name="image_src" content="">>Duck IMG Placeholder.<< "" />
 
-    	<meta name="image_src" content= "">>Duck IMG Placeholder.<<"" />
+    <meta name="title" content="RBR Duck" />
 
-      <meta name="title" content="RBR Duck" />
+    <meta name="description" content="RBR Duck is your go to duck for all of your troubleshooting needs. Over 12 Software Engineering categories to get find help and a online community of programmers to help. Quack!" />
 
-      <meta name="description" content="RBR Duck is your go to duck for all of your troubleshooting needs. Over 12 Software Engineering categories to get find help and a online community of programmers to help. Quack!" />
+    <meta property="og:image:type" content="image/png" />
 
-      <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
 
-      <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
 
-      <meta property="og:image:height" content="627" />
+    <meta property="og:image:url" content=">>/img/Duckio_Home.png<<" />
 
-      <meta property="og:image:url" content=">>/img/Duckio_Home.png<<" />
+    <meta property="og:image" content=">>/img/Duckio_Home.png<<" />
 
-      <meta property="og:image" content=">>/img/Duckio_Home.png<<" />
+    <meta property="og:image:secure_url" content=">>/img/Duckio_Home.png<<" />
 
-    	<meta property="og:image:secure_url" content=">>/img/Duckio_Home.png<<" />
+    <meta property="og:site_name" content="RBR Duck" />
 
-    	<meta property="og:site_name" content="RBR Duck" />
 
-    <!-- Stylesheets -->
+    <!-- Title -->
+  	<title>RBR Duck</title>
+
+    <link rel="shortcut icon" href=".ico">
+
+
+    <!-- Links -->
+    <link href="https://fonts.googleapis.com/css?family=Delius+Unicase" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/style.css">
-    <!-- Vendor Scripts -->
+
+    
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <!-- Applications Scripts -->
-    <script src = 'scripts/app.js'></script>
 
-  </head>
-  <body>
-    <div id = 'duckBubble'>GitCheck </div>
+</head>
 
-  </body>
+<body>
+    <div id='duckBubble'>GitCheck </div>
+
+
+    <script></script>
+    <script src='scripts/app.js'></script>
+</body>
+
 </html>
