Added bootstrap css, bootstrap js, and jQuery

--- a/views/index.html
+++ b/views/index.html
@@ -36,20 +36,26 @@
     <!-- Links -->
     <link href="https://fonts.googleapis.com/css?family=Delius+Unicase" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="styles/style.css">
 
-    
-
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
+
     <div id='duckBubble'>GitCheck </div>
 
 
-    <script></script>
+    <!-- scripts -->
+    
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+
+    <script src"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <script src='scripts/app.js'></script>
+
 </body>
 
 </html>
