Added header with basic content. Added visibility styling to class topNav to get visual confirmations of changes.

--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
 
-    <meta name="image_src" content="">>Duck IMG Placeholder.<< "" />
+    <meta name="image_src" content="Duck IMG Placeholder" />
 
     <meta name="title" content="RBR Duck" />
 
@@ -38,18 +38,27 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 
 
 </head>
 
 <body>
 
-    <div id='duckBubble'>GitCheck </div>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 topNav">
+          <p>RBR Duck</p>
+        </div>
+      </div>
+    </div>
+  </header>
+
 
 
     <!-- scripts -->
-    
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
     <script src"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
