--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
 
     <meta charset="utf-8">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <meta name="image_src" content="Duck IMG Placeholder" />
 
     <meta name="title" content="RBR Duck" />
@@ -46,13 +48,63 @@
 <body>
 
   <header>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 topNav">
-          <p>RBR Duck</p>
+
+    <nav class="navbar navbar-default">
+
+      <div class="container-fluid">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+
+        <div class="navbar-header">
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+
+            <span class="sr-only">Toggle navigation</span>
+
+            <span class="icon-bar"></span>
+
+            <span class="icon-bar"></span>
+
+            <span class="icon-bar"></span>
+
+          </button>
+
+          <a class="navbar-brand" href="#">Test!</a>
+
         </div>
-      </div>
-    </div>
+
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+
+          <ul class="nav navbar-nav navbar-right">
+
+            <li class="dropdown">
+
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+
+              <ul class="dropdown-menu">
+
+                <li><a href="#">Test1</a></li>
+
+                <li><a href="#">Test2</a></li>
+
+                <li><a href="#">Test3</a></li>
+
+                <li role="separator" class="divider"></li>
+
+                <li><a href="#">Test4</a></li>
+
+                <li role="separator" class="divider"></li>
+
+                <li><a href="#">Test5</a></li>
+
+              </ul>
+
+            </li>
+
+          </ul>
+
+        </div>
+
   </header>
 
 
