--- a/views/index.html
+++ b/views/index.html
@@ -53,8 +53,6 @@
 
       <div class="container-fluid">
 
-        <!-- Brand and toggle get grouped for better mobile display -->
-
         <div class="navbar-header">
 
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -104,6 +102,10 @@
           </ul>
 
         </div>
+
+      </div>
+
+    </nav>
 
   </header>
 
