--- a/views/index.html
+++ b/views/index.html
@@ -77,7 +77,7 @@
 
             <li class="dropdown">
 
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 
               <ul class="dropdown-menu">
 
@@ -108,7 +108,6 @@
     </nav>
 
   </header>
-
 
 
     <!-- scripts -->
