--- a/views/main.css
+++ b/views/main.css
@@ -1,7 +1,7 @@
 /*font-family: 'Delius Unicase', cursive;*/
 
-.topNav {
+.container-fluid {
   border: 1px solid black;
-  color: red;
-  background-color: blue;
+  color: black;
+  background-color: #B2A612;
 }
