--- a/views/index.html
+++ b/views/index.html
@@ -109,12 +109,27 @@
 
   </header>
 
+  <div class="container-fluid starImage">
+
+    <div class="row">
+
+      <div class="col-lg-12">
+
+        <p>Test section</p>
+
+      </div>
+
+    </div>
+
+  </div>
 
     <!-- scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
     <script src"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 
     <script src="app.js"></script>
 
