--- a/views/index.html
+++ b/views/index.html
@@ -36,9 +36,9 @@
 
 
     <!-- Links -->
-    <link href="https://fonts.googleapis.com/css?family=Delius+Unicase" rel="stylesheet">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Delius+Unicase" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="main.css">
 
@@ -47,89 +47,81 @@
 
 <body>
 
-  <header>
+  <nav id="nav1" class="navbar navbar-default navbar-custom navbar-fixed-top">
 
-    <nav class="navbar navbar-default">
+      <div class="container">
 
-      <div class="container-fluid">
+          <div class="navbar-header page-scroll">
 
-        <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
 
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+                  <span class="sr-only">Toggle navigation</span>
 
-            <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
 
-            <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
 
-            <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
 
-            <span class="icon-bar"></span>
+              </button>
 
-          </button>
+              <a class="navbar-brand page-scroll" href="#page-top">RBR Duck</a>
 
-          <a class="navbar-brand" href="#">Test!</a>
+          </div>
 
-        </div>
+          <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
 
-        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">
 
-          <ul class="nav navbar-nav navbar-right">
+                  <li class="hidden">
 
-            <li class="dropdown">
+                      <a href="#page-top"></a>
 
-              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  </li>
 
-              <ul class="dropdown-menu">
+                  <li>
 
-                <li><a href="#">Test1</a></li>
+                      <a class="page-scroll" href="#about">About</a>
 
-                <li><a href="#">Test2</a></li>
+                  </li>
 
-                <li><a href="#">Test3</a></li>
+                  <li>
 
-                <li role="separator" class="divider"></li>
+                      <a class="page-scroll" href="#teamLink">The Team</a>
 
-                <li><a href="#">Test4</a></li>
+                  </li>
 
-                <li role="separator" class="divider"></li>
+                  <li>
 
-                <li><a href="#">Test5</a></li>
+                      <a class="navLinks" href="#championLink">Quick Quack</a>
+
+                  </li>
+
+                  <li>
+
+                      <button type="button" class="btn btn-success btn-lg logIn"><a href="wwww.rbrduck.heroku.com/login">Log In</a></button>
+
+                  </li>
+
+                  <li>
+
+                      <button type="button" class="btn btn-info btn-lg signUp"><a href="www.rbrduck.heroku.com/register">Sign Up</a></button>
+
+                  </li>
 
               </ul>
 
-            </li>
-
-          </ul>
-
-        </div>
+          </div>
 
       </div>
 
-    </nav>
-
-  </header>
-
-  <div class="container-fluid starImage">
-
-    <div class="row">
-
-      <div class="col-lg-12">
-
-        <p>Test section</p>
-
-      </div>
-
-    </div>
-
-  </div>
+  </nav>
 
     <!-- scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
     <script src"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 
     <script src="app.js"></script>
 
