Added welcome section. Added background image of RBR Duck with mascot Duckio. Removed jQuery from app.js to work from scratch later on.

--- a/views/index.html
+++ b/views/index.html
@@ -93,7 +93,7 @@
 
                   <li>
 
-                      <a class="navLinks" href="#championLink">Quick Quack</a>
+                      <a href="#championLink">Quick Quack</a>
 
                   </li>
 
@@ -116,6 +116,24 @@
       </div>
 
   </nav>
+
+  <header>
+
+    <div class="container">
+
+        <div class="welcomeText">
+
+            <div class="welcomeBrandName">RBR Duck</div>
+
+            <div class="welcomeMotto">Don't have to ruffle up your feathers!</div>
+
+            <a href="#championLink" class="btn btn-danger btn-lg">Let's take a quack at it!</a>
+
+        </div>
+
+    </div>
+
+  </header>
 
     <!-- scripts -->
 
