Corrected welcomeBackground image. Began work on About section.

--- a/views/index.html
+++ b/views/index.html
@@ -135,6 +135,33 @@
 
   </header>
 
+  <section id="services">
+
+
+      <div class="container">
+
+          <div class="row">
+
+              <div class="col-lg-12 text-center">
+
+                  <h2 class="section-heading">About</h2>
+
+                  <h3 class="section-subheading text-muted">A duck tale</h3>
+
+              </div>
+
+          </div>
+
+          <div class="row text-center">
+
+              <div class="col-md-4">
+
+                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+
+              </div>
+
+  </section>
+
     <!-- scripts -->
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
