--- a/views/index.html
+++ b/views/index.html
@@ -125,7 +125,7 @@
 
             <div class="welcomeBrandName">RBR Duck</div>
 
-            <div class="welcomeMotto">Don't have to ruffle up your feathers!</div>
+            <div class="welcomeMotto">Don't ruffle up your feathers!</div>
 
             <a href="#championLink" class="btn btn-danger btn-lg">Let's take a quack at it!</a>
 
@@ -137,7 +137,6 @@
 
   <section id="services">
 
-
       <div class="container">
 
           <div class="row">
@@ -146,7 +145,7 @@
 
                   <h2 class="section-heading">About</h2>
 
-                  <h3 class="section-subheading text-muted">A duck tale</h3>
+                  <h3 class="section-subheading text-muted">A Duck Tale</h3>
 
               </div>
 
@@ -154,11 +153,15 @@
 
           <div class="row text-center">
 
-              <div class="col-md-4">
+              <div class="col-md-4 col-md-offset-4">
 
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                  <p class="aboutText">Af slow-carb taxidermy tumblr mlkshk, tilde sriracha. Mlkshk kickstarter mixtape, listicle gastropub williamsburg aesthetic hexagon. YOLO pug humblebrag, sustainable banjo fixie pickled keffiyeh chia chambray trust fund. Synth kinfolk cornhole migas shabby chic. Food truck portland before they sold out raw denim. Celiac hot chicken kogi, hella meh freegan brunch sartorial chambray. Trust fund etsy keffiyeh taxidermy chia kinfolk.<br><br>3 wolf moon paleo etsy knausgaard enamel pin, chambray kickstarter master cleanse. Aesthetic whatever kombucha, squid snackwave semiotics single-origin coffee seitan humblebrag banjo pour-over mlkshk cliche ennui mustache. Schlitz migas hashtag poke skateboard affogato. Live-edge echo park activated charcoal everyday carry, tote bag prism actually bushwick helvetica truffaut single-origin coffee banjo mumblecore brooklyn. Poutine dreamcatcher pickled 8-bit, forage lyft literally hammock jean shorts humblebrag flannel sriracha. Man bun cray kinfolk, cardigan vaporware raclette cred thundercats hexagon next level pok pok mlkshk. Echo park yuccie raw denim umami brooklyn.</p>
 
               </div>
+
+          </div>
+
+      </div>
 
   </section>
 
