Finalized About section. Finalized Team section.

--- a/views/index.html
+++ b/views/index.html
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,
      shrink-to-fit=no">
-    <meta name="image_src" content="Duck IMG Placeholder" />
-    <meta name="title" content="RBR Duck" />
+    <meta name="image_src" content="Duck IMG Placeholder"/>
+    <meta name="title" content="RBR Duck"/>
     <meta name="description" content="RBR Duck is your go to duck for all of
      your troubleshooting needs. Over 12 Software Engineering categories to get
-     find help and a online community of programmers to help. Quack!" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="627" />
-    <meta property="og:image:url" content=">>/img/Duckio_Home.png<<" />
-    <meta property="og:image" content=">>/img/Duckio_Home.png<<" />
-    <meta property="og:image:secure_url" content=">>/img/Duckio_Home.png<<" />
-    <meta property="og:site_name" content="RBR Duck" />
+     find help and a online community of programmers to help. Quack!"/>
+    <meta property="og:image:type" content="image/png"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="627"/>
+    <meta property="og:image:url" content=">>/img/Duckio_Home.png<<"/>
+    <meta property="og:image" content=">>/img/Duckio_Home.png<<"/>
+    <meta property="og:image:secure_url" content=">>/img/Duckio_Home.png<<"/>
+    <meta property="og:site_name" content="RBR Duck"/>
 
   	<title>RBR Duck</title>
 
@@ -48,10 +48,10 @@
                       <a href="#page-top"></a>
                   </li>
                   <li>
-                      <a class="page-scroll" href="#about">About</a>
+                      <a class="page-scroll" href="#aboutDuck">About</a>
                   </li>
                   <li>
-                      <a class="page-scroll" href="#teamLink">The Team</a>
+                      <a class="page-scroll" href="#ourTeam">The Flock</a>
                   </li>
                   <li>
                       <a href="#championLink">Quick Quack</a>
@@ -70,21 +70,21 @@
   </nav>
 
   <header>
-    <div class="container">
+    <div class="container" id="page-top">
         <div class="welcomeText">
             <div class="welcomeBrandName">RBR Duck</div>
             <div class="welcomeMotto">Don't ruffle up your feathers!</div>
-            <a href="#championLink" class="btn btn-danger btn-lg">Let's take a quack at it!</a>
+            <a href="www.rbrduck.heroku.com/championPage" class="btn btn-danger btn-lg">Let's take a quack at it!</a>
         </div>
     </div>
   </header>
 
-  <section id="services">
+  <section id="aboutDuck">
       <div class="container">
           <div class="row">
               <div class="col-lg-12 text-center">
-                  <h2 class="section-heading">About</h2>
-                  <h3 class="section-subheading text-muted">A Duck Tale</h3>
+                  <h2 class="section-heading">ABOUT</h2>
+                  <h3 class="section-subheading">a duck tale</h3>
               </div>
           </div>
           <div class="row text-center">
@@ -113,6 +113,71 @@
           </div>
       </div>
   </section>
+
+  <section id="ourTeam">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">THE FLOCK</h2>
+                    <h3 class="section-subheading">birds of a feather</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-sm-offset-4">
+                    <div class="teamSection">
+                      <img src="/Users/MartinUriarte/wdi/wip/project-01/rubber-duck/dfTeamPic.jpeg">
+                      <h4>Daniel Finelli</h4>
+                      <br>
+                      <p><strong>Back-End Engineer</strong></p>
+                      <p><strong><a href="https://github.com/danfinelli1">GitHub</a> • <a
+                      href="https://www.linkedin.com/in/daniel-finelli-1069aba2">LinkedIn</a> • <a
+                      href="https://danfinelli1.github.io/">Portfolio</a></strong></p>
+                      <br>
+                      <p>Just a city boy from Jersey who likes to use the
+                      following words. "Chambray four loko ramps wolf,
+                      semiotics tilde single-origin coffee raclette listicle
+                      crucifix man braid craft beer pop-up pitchfork
+                      pinterest. Ugh kale chips pabst, la croix tousled
+                      chillwave viral pitchfork bespoke unicorn pork belly
+                      mlkshk. Ramps brunch drinking vinegar disrupt etsy
+                      marfa. Blog coloring book la croix gluten-free 90's. Man
+                      braid plaid offal salvia, austin selvage affogato
+                      crucifix. Slow-carb kitsch lomo freegan banh mi,
+                      raclette scenester man bun. Gentrify yr cardigan,
+                      flexitarian schlitz blog DIY raclette bushwick
+                      microdosing cray." </p>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-sm-offset-4">
+                    <div class="teamSection">
+                      <img src="/Users/MartinUriarte/wdi/wip/project-01/rubber-duck/muTeamPic.jpeg">
+                      <h4>Martin Uriarte</h4>
+                      <br>
+                      <p><strong>Front-End Engineer</strong></p>
+                      <p><strong><a href="https://github.com/themartinuriarte">GitHub</a> • <a
+                      href="https://www.linkedin.com/in/themartinuriarte">LinkedIn</a> • <a
+                      href="https://themartinuriarte.github.io/">Portfolio</a></strong></p>
+                      <br>
+                      <p>Hardcore gamer who specializes in the game of life.
+                      Has a tendency to use similar words to his partner but
+                      with a shot of latin thrown in the mix. "Vegan plaid
+                      PBR, polaroid deep v salvia etsy pickled officia
+                      stumptown. Post-ironic in cornhole schlitz, sartorial
+                      +1 deep v tumblr swag pabst dolor pop-up. Nisi migas
+                      art party vexillologist, irure viral salvia succulents
+                      vegan offal thundercats. Trust fund knausgaard
+                      try-hard, microdosing esse id health goth blog
+                      chillwave organic portland salvia hoodie kitsch fam.
+                      Marfa kickstarter hammock roof party est. Chicharrones
+                      letterpress bespoke, flexitarian officia af nesciunt
+                      deep v. Ugh tacos ramps shabby chic mustache
+                      voluptate."</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+  </section>
+
 
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
