--- a/views/main.css
+++ b/views/main.css
@@ -1,7 +1,7 @@
 /*font-family: 'Delius Unicase', cursive;*/
 
 header {
-  background-image: url('rubber-duck/welcomeBackground.png');
+  background-image: url('/Users/MartinUriarte/wdi/wip/project-01/rubber-duck/welcomeBackground.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -52,6 +52,23 @@ header .welcomeText .welcomeBrandName {
   color: white;
 }
 
+.teamSection{
+  text-align: center;
+  margin-bottom: 50px;
+}
+.teamSection img {
+  margin: 0 auto;
+  border: 7px solid white;
+}
+.teamSection h4 {
+  margin-top: 25px;
+  margin-bottom: 0;
+  text-transform: none;
+}
+.teamSection p {
+  margin-top: 0;
+}
+
 a {
   color: inherit;
 }
@@ -81,6 +98,7 @@ section h2.section-heading {
   margin-top: 0;
   margin-bottom: 5px;
   color: white;
+  text-decoration: underline;
 }
 section h3.section-subheading {
   font-size: 50px;
@@ -91,6 +109,15 @@ section h3.section-subheading {
   color: white;
 }
 
-#services {
+img {
+  width: 250px;
+  height: auto;
+}
+
+#aboutDuck {
   background-color: rgb(92,184,92);
+}
+
+#ourTeam {
+  background-color: rgb(91,192,222);
 }
