--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand page-scroll" href="#page-top">RBR Duck</a>
+              <a class="navbar-brand page-scroll" href="#page-top"><strong>RBR Duck</strong></a>
           </div>
           <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
@@ -48,13 +48,13 @@
                       <a href="#page-top"></a>
                   </li>
                   <li>
-                      <a class="page-scroll" href="#aboutDuck">About</a>
+                      <a class="page-scroll" href="#aboutDuck"><strong>About</strong></a>
                   </li>
                   <li>
-                      <a class="page-scroll" href="#ourTeam">The Flock</a>
+                      <a class="page-scroll" href="#ourTeam"><strong>The Flock</strong></a>
                   </li>
                   <li>
-                      <a href="#championLink">Quick Quack</a>
+                      <a href="#championLink"><strong>Quick Quack</strong></a>
                   </li>
                   <li>
                       <button type="button" class="btn btn-success btn-lg logIn">
@@ -178,7 +178,18 @@
         </div>
   </section>
 
-
+  <footer class="finisher">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4">
+                  <p><strong>Copyright RBR Duck 2016</strong></p>
+              </div>
+              <div class="col-md-4 col-md-offset-4">
+                  <p><strong>Made Possible by General Assembly (Jeastin)</strong></p>
+              </div>
+          </div>
+      </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
