--- a/views/qForm.hbs
+++ b/views/qForm.hbs
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
-    <script src="scripts/hbApp.js"></script>
+    <script src="scripts/app.js"></script>
 </head>
 
 <body>
