--- a/views/html.hbs
+++ b/views/html.hbs
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
     <!-- Applications Scripts -->
-    <script src='scripts/htmlApp.js'></script>
+    <script src='scripts/app.js'></script>
 
 </head>
 
