--- a/views/index.html
+++ b/views/index.html
@@ -16,12 +16,9 @@
   <body>
     <div id = 'duckBubble'>What language would you like?
     <br><br><div id = 'buttons'>
-    <input id="htmlBtn" class='btn' type="button" value="HTML" redirect='/html'/>
-    <input id="cssBtn" class='btn' type="button" value="CSS" redirect='/css' />
-    <input id="javascriptBtn" class='btn' type="button" value="JavaScript" />
-    <input id="jQueryBtn" class='btn' type="button" value="JQuery" />
-    <input id="expressBtn" class='btn' type="button" value="Express" />
-    <input id="rubyBtn" class='btn' type="button" value="Ruby" />
+    <input id="htmlBtn" class='btn' type="button" value="HTML" redirect='html.hbs'/>
+    <input id="cssBtn" class='btn' type="button" value="CSS" redirect='html.hbs' />
+    <input id="javascriptBtn" class='btn' type="button" value="JavaScript" redirect='html.hbs'/>
   </div>
   </body>
 </html>
