did database correctly

--- a/views/language/html.hbs
+++ b/views/language/html.hbs
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="section-subheading">EVERYTHING WILL GO SWIMMINGLY</h3>
+                    <h3 class="section-subheading">HTML</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -75,12 +75,13 @@
 
                 </div>
                 <div class="col-md-6 col-md-offset-2">
-                    <p id="solutionText">
-                      <strong>What language would you like?</strong>
-                      <input id="htmlBtn" class='btn' type="button" value="HTML"/>
-                      <input id="cssBtn" class='btn' type="button" value="CSS" />
-                      <input id="javascriptBtn" class='btn' type="button" value="JavaScript"/>
-                    </p>
+                    <div id='duckBubble'><br></div>
+                    <div class='userResponse'>
+                        <span id='input'>Did this answer fix your problem?</span>
+                        <button id="yesBtn" name="Yes" type="button" class="btn btn-primary">Yes</button>
+                        <button id="noBtn" name="No" type="button" class="btn btn-primary">No</button>
+                    </div>
+                    <div id='relatedLink'></div>
                 </div>
             </div>
         </div>
