--- a/views/language/css.hbs
+++ b/views/language/css.hbs
@@ -46,16 +46,16 @@
             <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="/"></a>
                     </li>
                     <li>
                         <a href="/"><strong>Return Home</strong></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="www.rbrduck.heroku.com/#aboutDuck"><strong>About</strong></a>
+                        <a class="page-scroll" href="/about.html"><strong>About</strong></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="www.rbrduck.heroku.com/#ourTeam"><strong>The Flock</strong></a>
+                        <a class="page-scroll" href="/ourTeam.html"><strong>The Flock</strong></a>
                     </li>
                 </ul>
             </div>
@@ -66,21 +66,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="section-subheading">EVERYTHING WILL GO SWIMMINGLY</h3>
+                    <h3 class="section-subheading">CSS</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <img src="images/welcomeBackground.png">
-
                 </div>
                 <div class="col-md-6 col-md-offset-2">
-                    <p id="solutionText">
-                      <strong>What language would you like?</strong>
-                      <input id="htmlBtn" class='btn' type="button" value="HTML"/>
-                      <input id="cssBtn" class='btn' type="button" value="CSS" />
-                      <input id="javascriptBtn" class='btn' type="button" value="JavaScript"/>
-                    </p>
+                    <div id='duckBubble'><br></div>
+                    <div class='userResponse'>
+                        <span id='input'>Did this answer fix your problem?</span>
+                        <button id="yesBtn" name="Yes" type="button" class="btn btn-primary">Yes</button>
+                        <button id="noBtn" name="No" type="button" class="btn btn-primary">No</button>
+                    </div>
+                    <div id='relatedLink'></div>
                 </div>
             </div>
         </div>
