questions and links change with language

--- a/views/language/css.hbs
+++ b/views/language/css.hbs
@@ -52,10 +52,10 @@
                         <a href="/"><strong>Return Home</strong></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/about.html"><strong>About</strong></a>
+                        <a class="page-scroll" href="/about"><strong>About</strong></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/ourTeam.html"><strong>The Flock</strong></a>
+                        <a class="page-scroll" href="/ourTeam"><strong>The Flock</strong></a>
                     </li>
                 </ul>
             </div>
