--- a/views/language/html.hbs
+++ b/views/language/html.hbs
@@ -68,6 +68,7 @@
                 <div class="col-lg-12 text-center">
                     <h3 class="section-subheading">HTML</h3>
                 </div>
+                <h5>Click the 'No' to begin the questions cycle!</h5>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
