--- a/views/language/css.hbs
+++ b/views/language/css.hbs
@@ -68,6 +68,7 @@
                 <div class="col-lg-12 text-center">
                     <h3 class="section-subheading">CSS</h3>
                 </div>
+                <h5>Click the Duck to begin!</h5>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
