--- a/views/language/js.hbs
+++ b/views/language/js.hbs
@@ -70,6 +70,7 @@
                 </div>
             </div>
             <div class="row text-center">
+              <h5>Click the 'No' to begin the questions cycle!</h5>
                 <div class="col-md-4">
                     <img src="images/welcomeBackground.png">
 
